<resources>
    <!--Non translatable-->
    <string name="fc_app_name" translatable="false">FamChat</string>

    <string name="ca_minute">phút</string>
    <string name="ca_minutes">phút</string>
    <string name="ca_hour">giờ</string>
    <string name="ca_hours">giờ</string>
    <string name="ca_day">ngày</string>
    <string name="ca_days">ngày</string>

    <string name="fc_close">Đóng</string>
    <string name="fc_notification">Thông báo</string>
    <string name="fc_backToLogin">Quay lại đăng nhập</string>
    <string name="fc_need_create_account">Cần tạo tài khoản mới? Đăng ký</string>
    <string name="fc_signUp">Đăng ký</string>
    <string name="fc_darkTheme">Tối</string>
    <string name="fc_lightTheme">Sáng</string>
    <string name="fc_systemTheme">Hệ thống</string>
    <string name="fc_welcomeBack">FamChat</string>
    <string name="fc_loginToContinue">Chào mừng quay trở lại!</string>
    <string name="fc_continueToFamChat">để tiếp tục với FamChat</string>
    <string name="fc_createAccount">Tạo tài khoản</string>
    <string name="fc_connect_friends">Kết nối bạn bè dễ dàng &amp; nhanh chóng</string>
    <string name="fc_app_description">Ứng dụng chat của chúng tôi là cách hoàn hảo để giữ liên lạc với bạn bè và gia đình.</string>
    <string name="fc_or">HOẶC</string>
    <string name="fc_sign_up_mail">Đăng ký bằng email</string>
    <string name="fc_hasAccountLogin">Đã có tài khoản? Đăng nhập</string>
    <string name="fc_your_email">Email của bạn</string>
    <string name="fc_password">Mật khẩu</string>
    <string name="fc_remember_password">Ghi nhớ mật khẩu</string>
    <string name="fc_login">Đăng nhập</string>
    <string name="fc_forgot_password">Quên mật khẩu?</string>
    <string name="fc_login_title">Đăng nhập vào FamChat</string>
    <string name="fc_login_subtitle">Chào mừng bạn quay lại! Hãy đăng nhập bằng tài khoản mạng xã hội hoặc email để tiếp tục với chúng tôi</string>
    <string name="fc_get_chatting">
    Bắt đầu trò chuyện với bạn bè và gia đình ngay hôm nay bằng cách đăng ký ứng dụng chat của chúng tôi!
    </string>
    <string name="fc_your_name">Tên của bạn</string>
    <string name="fc_confirm_password">Xác nhận mật khẩu</string>
    <string name="fc_verifyCode">Xác thực mã</string>
    <string name="fc_resendCode">Gửi lại mã</string>
    <string name="fc_agreeWithTheTermsPolicy">Tôi đồng ý với Điều khoản và Chính sách bảo mật</string>
    <string name="fc_phoneNumber">Số điện thoại</string>
    <string name="fc_register_account">Đăng ký tài khoản</string>
    <string name="fc_create_account">Tạo tài khoản</string>
    <string name="fc_message">Tin nhắn</string>
    <string name="fc_calls">Cuộc gọi</string>
    <string name="fc_contacts">Danh bạ</string>
    <string name="fc_settings">Cài đặt</string>

    <string name="fc_my_contacts">Danh bạ của tôi</string>
    <string name="fc_recent">Gần đây</string>

    <string name="fc_settings_account_title">Tài khoản</string>
    <string name="fc_settings_account_sub">Bảo mật, quyền riêng tư, đổi số</string>

    <string name="fc_settings_chat_title">Trò chuyện</string>
    <string name="fc_settings_chat_sub">Lịch sử, chủ đề, hình nền</string>

    <string name="fc_settings_notifications_title">Thông báo</string>
    <string name="fc_settings_notifications_sub">Tin nhắn, nhóm và khác</string>

    <string name="fc_settings_help_title">Trợ giúp</string>
    <string name="fc_settings_help_sub">Trung tâm hỗ trợ, liên hệ, chính sách</string>

    <string name="fc_settings_storage_title">Lưu trữ và dữ liệu</string>
    <string name="fc_settings_storage_sub">Sử dụng mạng, dung lượng</string>

    <string name="fc_settings_invite_title">Mời bạn bè</string>
</resources>