<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1E1E">


    <!-- Logo + App name -->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_bg_blur"
        android:layout_width="1320dp"
        android:layout_height="875dp"
        android:translationY="-200dp"
        android:translationZ="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/fc_bg_blur" />

    <LinearLayout
        android:id="@+id/layout_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            app:srcCompat="@drawable/fc_ic_logo_white" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextStyleBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@string/fc_app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>

    <!-- Connect friends text -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_connect"
        style="@style/TextStyleBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:padding="16dp"
        android:text="@string/fc_connect_friends"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_55sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_logo" />

    <!-- App description -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_description"
        style="@style/TextStyleNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="50dp"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/fc_app_description"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_connect" />

    <!-- 3 login buttons (Facebook, Google, Apple) -->
    <LinearLayout
        android:id="@+id/layout_social"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/fc_bg_icon_radius_circle"
            android:layout_marginHorizontal="@dimen/_12sdp"
            app:srcCompat="@drawable/fc_ic_facebook" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/fc_bg_icon_radius_circle"
            android:layout_marginHorizontal="@dimen/_12sdp"
            app:srcCompat="@drawable/fc_ic_google" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/fc_bg_icon_radius_circle"
            android:layout_marginHorizontal="@dimen/_12sdp"
            app:srcCompat="@drawable/fc_ic_apple" />
    </LinearLayout>

    <!-- Line OR line -->
    <LinearLayout
        android:id="@+id/layout_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/layout_social">

        <View
            android:layout_width="0dp"
            android:layout_height="1.5dp"
            android:layout_weight="1"
            android:background="@color/color_line" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextStyleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:text="@string/fc_or"
            android:textColor="@color/color_line"
            android:textSize="@dimen/_13sdp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1.5dp"
            android:layout_weight="1"
            android:background="@color/color_line" />
    </LinearLayout>

    <!-- Register button -->
    <com.example.famchat.widget.LibUIButtonCustom
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/fc_sign_up_mail"
        app:button_type="white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_or" />

    <!-- Login link -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_login"
        style="@style/TextStyleNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:gravity="center"
        android:text="@string/fc_hasAccountLogin"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
