<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@color/color_card_view">

        <LinearLayout
            android:id="@+id/ln_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="20dp"
            android:orientation="vertical">



            <com.example.famchat.widget.PinEntryEditText
                android:id="@+id/edt"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:cursorVisible="false"
                android:digits="1234567890"
                android:inputType="number"
                android:maxLength="6"
                android:textColor="@color/color_text_default"
                android:textIsSelectable="false"
                android:textSize="20sp"/>



            <com.example.famchat.widget.LibUIButtonCustom
                android:id="@+id/btn_verify"
                style="@style/TextStyleNormal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/fc_verifyCode"
                app:button_type="disable" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_count_resend"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:drawableStart="@drawable/fc_ic_resend"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                style="@style/TextStyleNormal"
                android:drawablePadding="6dp"
                android:textSize="@dimen/_12sdp"
                android:gravity="center"
                android:text="@string/fc_resendCode" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_back_login"
                style="@style/TextStyleNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                android:foreground="?attr/selectableItemBackground"
                android:drawableStart="@drawable/fc_ic_arrow_left2"
                android:drawablePadding="@dimen/_5sdp"
                android:drawableTint="@color/fc_color_primary"
                android:gravity="center"
                android:text="@string/fc_backToLogin"
                android:textColor="@color/fc_color_primary"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>

